<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BottomAppBarPrimaryColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_viewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ViewAreaMargin"
            android:background="@color/colorSecondary"
            android:fontFamily="@font/regular"
            android:paddingTop="@dimen/ViewAreaPadding"
            android:paddingBottom="@dimen/ViewAreaPadding"
            android:text="@string/my_information"
            android:textAlignment="center"
            android:textColor="@color/colorTextS"
            android:textSize="72sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tamAd_info"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorSecondary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_accountround"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorSecondary"
                        android:hint="@string/info_ad"
                        android:singleLine="true"
                        android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tamIletisim_info"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorSecondary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorSecondary"
                        android:hint="@string/info_iletisim"
                        android:singleLine="true"
                        android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tamProgram_info"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorSecondary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorSecondary"
                        android:hint="@string/info_program"
                        android:singleLine="true"
                        android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tamDogum_info"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorSecondary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorSecondary"
                        android:hint="@string/info_dogum"
                        android:singleLine="true"
                        android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cinsiyet_info"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorSecondary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorSecondary"
                        android:hint="@string/info_cinsiyet"
                        android:singleLine="true"
                        android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tamKimlik_info"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorSecondary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorSecondary"
                        android:hint="@string/info_kimlik"
                        android:singleLine="true"
                        android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/save_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginEnd="@dimen/FloatingButtonMargin"
                    android:layout_marginBottom="@dimen/FloatingButtonMargin"
                    android:clickable="true"
                    android:tint="@color/BottomAppBarSecondaryColor"
                    app:backgroundTint="@color/BottomAppBarPrimaryColor"
                    app:rippleColor="@color/colorSecondaryDark"
                    app:srcCompat="@drawable/ic_save" />
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>